# jacob-macmillan-software.github.io

./: .gitignore  CNAME  Gemfile  _config.yml  _config_test_formspree.yml  _config_test_nocal.yml  _config_test_noquote.yml  _config_test_portfolio.yml  _config_test_upwork.yml  about.md  articles.md  contact.md  index.md
_data/: authors.yml
_includes/: calendly.html  footer.html  head.html  header.html  hotjar.html  quote-form.html  social.html
_layouts/: default.html  home.html  post.html
_posts/: 2024-03-28-chess-engine.md  2024-04-05-replicating-game.md  2024-04-12-jekyll-ab-testing.md  2024_04_05_replicating_game.md
assets/: style.scss
scripts/copy-to-bucket/: copy-to-bucket.sh  package-lock.json  package.json
scripts/gen-test-sites/: pyproject.toml
scripts/gen-test-sites/src/: main.py
scripts/test-selector/: package-lock.json  package.json  wrangler.toml
scripts/test-selector/src/: index.ts
